--- a/src/Pages/CSS/LoginSignup.css
+++ b/src/Pages/CSS/LoginSignup.css
@@ -54,6 +54,7 @@
 .loginsignup-agree{
     display: flex;
     align-items: center;
+    margin-top: 25px;
     gap: 20px;
     color: #5c5c5c;
     font-size: 18px;
